--- a/Makefile.depend
+++ b/Makefile.depend
@@ -6,10 +6,14 @@ build/src/htserver.o: ./libevent-2.0.19-stable/include/event2/util.h
 build/src/htserver.o: ./libevent-2.0.19-stable/include/event2/http.h
 build/src/htserver.o: ./libevent-2.0.19-stable/include/event2/buffer.h
 build/src/htserver.o: src/htserver.h
+build/src/banana.o: src/banana.h
+build/src/banana.o: src/logger.h
 build/src/banana.o: src/htserver.h
 build/src/banana.o: ./libevent-2.0.19-stable/include/event2/event.h
 build/src/banana.o: ./libevent-2.0.19-stable/include/event2/event-config.h
 build/src/banana.o: ./libevent-2.0.19-stable/include/event2/util.h
 build/src/banana.o: ./libevent-2.0.19-stable/include/event2/http.h
 build/src/banana.o: ./libevent-2.0.19-stable/include/event2/buffer.h
-build/src/banana.o: src/banana.h
+build/src/banana.o: src/config.h
+build/src/config.o: src/config.h
+build/src/logger.o: src/logger.h
