Fix a few bugs and linting.

--- a/Makefile.depend
+++ b/Makefile.depend
@@ -10,8 +10,22 @@ build/banana.o: src/logger.h
 build/banana.o: src/htserver.h
 build/banana.o: src/config.h
 build/banana.o: src/bconfig.h
+build/banana.o: src/middleware.h
 build/banana.o: src/em.h
+build/banana.o: src/template.h
 build/config.o: src/config.h
 build/logger.o: src/logger.h
 build/em.o: src/em.h
 build/em.o: src/logger.h
+build/middleware.o: src/banana.h
+build/middleware.o: src/logger.h
+build/middleware.o: src/htserver.h
+build/middleware.o: src/config.h
+build/middleware.o: src/bconfig.h
+build/middleware.o: src/middleware.h
+build/template.o: src/banana.h
+build/template.o: src/logger.h
+build/template.o: src/htserver.h
+build/template.o: src/config.h
+build/template.o: src/bconfig.h
+build/template.o: src/template.h
