Added middleware scanning to the autogen files

--- a/Makefile.depend
+++ b/Makefile.depend
@@ -5,14 +5,6 @@ build/htserver.o: src/logger.h
 build/htserver.o: src/htserver.h
 build/htserver.o: src/config.h
 build/htserver.o: src/bconfig.h
-build/banana.o: src/banana.h
-build/banana.o: src/logger.h
-build/banana.o: src/htserver.h
-build/banana.o: src/config.h
-build/banana.o: src/bconfig.h
-build/banana.o: src/middleware.h
-build/banana.o: src/em.h
-build/banana.o: src/template.h
 build/config.o: src/config.h
 build/logger.o: src/logger.h
 build/em.o: src/em.h
@@ -22,18 +14,26 @@ build/middleware.o: src/logger.h
 build/middleware.o: src/htserver.h
 build/middleware.o: src/config.h
 build/middleware.o: src/bconfig.h
-build/middleware.o: src/middleware.h
+build/middleware.o: src/page.h
+build/middleware.o: src/template.h
 build/template.o: src/banana.h
 build/template.o: src/logger.h
 build/template.o: src/htserver.h
 build/template.o: src/config.h
 build/template.o: src/bconfig.h
 build/template.o: src/template.h
+build/banana.o: src/banana.h
+build/banana.o: src/logger.h
+build/banana.o: src/htserver.h
+build/banana.o: src/config.h
+build/banana.o: src/bconfig.h
+build/banana.o: src/em.h
+build/banana.o: src/template.h
+build/page_test.o: src/page.h
+build/page_test.o: src/htserver.h
 build/page_test.o: src/banana.h
 build/page_test.o: src/logger.h
-build/page_test.o: src/htserver.h
 build/page_test.o: src/config.h
 build/page_test.o: src/bconfig.h
-build/page_test.o: src/middleware.h
-build/page_test.o: src/em.h
 build/page_test.o: src/template.h
+build/page_test.o: src/em.h
