Rewrite htserver to use a mempool struct and multiple mempools (for, e.g: user and world template values)

--- a/Makefile.depend
+++ b/Makefile.depend
@@ -1,41 +1,49 @@
 # DO NOT DELETE
 
-build/htserver.o: src/banana.h
-build/htserver.o: src/logger.h
-build/htserver.o: src/htserver.h
-build/htserver.o: src/config.h
-build/htserver.o: src/bconfig.h
-build/htserver.o: src/page.h
-build/htserver.o: src/template.h
-build/config.o: src/config.h
-build/logger.o: src/logger.h
-build/em.o: src/em.h
-build/em.o: src/logger.h
+build/lib/htserver.o: src/banana.h
+build/lib/htserver.o: src/lib/logger.h
+build/lib/htserver.o: src/lib/htserver.h
+build/lib/htserver.o: src/lib/config.h
+build/lib/htserver.o: src/bconfig.h
+build/lib/htserver.o: src/lib/htserver.h
+build/lib/htserver.o: src/lib/mempool.h
+build/lib/htserver.o: src/page.h
+build/lib/htserver.o: src/lib/template.h
+build/lib/htserver.o: src/lib/logger.h
+build/lib/config.o: src/lib/config.h
+build/lib/logger.o: src/lib/logger.h
+build/lib/em.o: src/lib/em.h
+build/lib/em.o: src/lib/logger.h
+build/lib/template.o: src/banana.h
+build/lib/template.o: src/lib/logger.h
+build/lib/template.o: src/lib/htserver.h
+build/lib/template.o: src/lib/config.h
+build/lib/template.o: src/bconfig.h
+build/lib/template.o: src/lib/logger.h
+build/lib/template.o: src/lib/template.h
+build/lib/template.o: src/lib/htserver.h
 build/middleware.o: src/banana.h
-build/middleware.o: src/logger.h
-build/middleware.o: src/htserver.h
-build/middleware.o: src/config.h
+build/middleware.o: src/lib/logger.h
+build/middleware.o: src/lib/htserver.h
+build/middleware.o: src/lib/config.h
 build/middleware.o: src/bconfig.h
 build/middleware.o: src/page.h
-build/middleware.o: src/template.h
-build/template.o: src/banana.h
-build/template.o: src/logger.h
-build/template.o: src/htserver.h
-build/template.o: src/config.h
-build/template.o: src/bconfig.h
-build/template.o: src/template.h
+build/middleware.o: src/lib/template.h
+build/middleware.o: src/lib/htserver.h
 build/banana.o: src/banana.h
-build/banana.o: src/logger.h
-build/banana.o: src/htserver.h
-build/banana.o: src/config.h
+build/banana.o: src/lib/logger.h
+build/banana.o: src/lib/htserver.h
+build/banana.o: src/lib/config.h
 build/banana.o: src/bconfig.h
-build/banana.o: src/em.h
-build/banana.o: src/template.h
+build/banana.o: src/lib/em.h
+build/banana.o: src/lib/template.h
+build/banana.o: src/lib/htserver.h
 build/page_test.o: src/page.h
-build/page_test.o: src/htserver.h
+build/page_test.o: src/lib/htserver.h
 build/page_test.o: src/banana.h
-build/page_test.o: src/logger.h
-build/page_test.o: src/config.h
+build/page_test.o: src/lib/logger.h
+build/page_test.o: src/lib/config.h
 build/page_test.o: src/bconfig.h
-build/page_test.o: src/template.h
-build/page_test.o: src/em.h
+build/page_test.o: src/lib/template.h
+build/page_test.o: src/lib/htserver.h
+build/page_test.o: src/lib/em.h
