Starting work on user struct

--- a/Makefile.depend
+++ b/Makefile.depend
@@ -11,7 +11,6 @@ build/lib/htserver.o: src/lib/htserver.h
 build/lib/htserver.o: src/lib/mempool.h
 build/lib/htserver.o: src/page.h
 build/lib/htserver.o: src/lib/template.h
-build/lib/htserver.o: src/.middleware.h
 build/lib/htserver.o: src/lib/logger.h
 build/lib/config.o: src/lib/config.h
 build/lib/logger.o: src/lib/logger.h
@@ -33,7 +32,6 @@ build/middleware.o: src/lib/config.h
 build/middleware.o: src/bconfig.h
 build/middleware.o: src/page.h
 build/middleware.o: src/lib/template.h
-build/middleware.o: src/.middleware.h
 build/banana.o: src/banana.h
 build/banana.o: src/lib/logger.h
 build/banana.o: src/lib/htserver.h
@@ -41,16 +39,20 @@ build/banana.o: src/lib/mempool.h
 build/banana.o: src/lib/config.h
 build/banana.o: src/bconfig.h
 build/banana.o: src/lib/em.h
-build/banana.o: src/.middleware.h
 build/banana.o: src/lib/template.h
-build/.page_gen.o: src/.page_defs.h
-build/page_test.o: src/page.h
-build/page_test.o: src/lib/htserver.h
-build/page_test.o: src/lib/mempool.h
-build/page_test.o: src/banana.h
-build/page_test.o: src/lib/logger.h
-build/page_test.o: src/lib/config.h
-build/page_test.o: src/bconfig.h
-build/page_test.o: src/lib/template.h
-build/page_test.o: src/.middleware.h
-build/page_test.o: src/lib/em.h
+build/user.o: src/user.h
+build/user.o: src/banana.h
+build/user.o: src/lib/logger.h
+build/user.o: src/lib/htserver.h
+build/user.o: src/lib/mempool.h
+build/user.o: src/lib/config.h
+build/user.o: src/bconfig.h
+build/page_user.o: src/page.h
+build/page_user.o: src/lib/htserver.h
+build/page_user.o: src/lib/mempool.h
+build/page_user.o: src/banana.h
+build/page_user.o: src/lib/logger.h
+build/page_user.o: src/lib/config.h
+build/page_user.o: src/bconfig.h
+build/page_user.o: src/lib/template.h
+build/page_user.o: src/lib/em.h
